fixed spacing

--- a/public/css/barackstyle.css
+++ b/public/css/barackstyle.css
@@ -13,7 +13,6 @@ body{
 	
 }
 #base p{
-	color: #5A18C9;
 	font-size: 130%; 
 	
 
